Mon Apr 27 02:09:09 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/DefinedFunction.java: remove unused
	  method #epilogueLabel.

Mon Apr 27 02:04:26 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/Type.java: new class representing
	  assembly integer types.

	* net/loveruby/cflat/asm/*.java: support it.

	* net/loveruby/cflat/ir/*.java: support it.

	* net/loveruby/cflat/compiler/IRGenerator.java: convert ast Type
	  -> asm Type.

	* net/loveruby/cflat/compiler/CodeGenerator.java: use asm Type.

Mon Apr 27 00:24:24 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: remove simple
	  delegators (to Assembler).

	* net/loveruby/cflat/asm/Assembler.java: add _byte(long), etc.

	* net/loveruby/cflat/ir/IR.java: do not export typeTable, provide
	  natural type instead.

Sun Apr 26 23:54:47 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java: use
	  ExprNode#shouldEvalutedToAddress again, it contains complex
	  condition.

Sun Apr 26 23:39:56 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ir/Expr.java: show Expr type on dump.

	* net/loveruby/cflat/type/FunctionType.java: FunctionType#toString
	  should separate each argument types by ",".

Sun Apr 26 23:35:07 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ir: implement IR#dump.

Sun Apr 26 22:41:08 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/IRGenerator.java (BlockNode): static
	  variables are special case.

	* net/loveruby/cflat/compiler/IRGenerator.java (SwitchNode):
	  Switch must precedes Case bodies to prevent programs from infinite
	  loop.

	* net/loveruby/cflat/compiler/CodeGenerator.java (Bin): fix MOD
	  problem.

	* net/loveruby/cflat/compiler/CodeGenerator.java (Bin): fix LSHIFT
	  problem.

Sun Apr 26 22:08:35 2009  Minero Aoki  <aamine@loveruby.net>

	* now IR nodes are separated from AST.  Sources are compilable but