@@ -1,0 +1,5 @@
+package net.loveruby.cflat.ast;
+
+public interface Dumpable {
+    void dump(Dumper d);
+}
