@@ -1,8 +1,9 @@
 package net.loveruby.cflat.compiler;
 import net.loveruby.cflat.ast.*;
-import net.loveruby.cflat.ir.*;
+import net.loveruby.cflat.entity.*;
 import net.loveruby.cflat.type.Type;
 import net.loveruby.cflat.type.TypeTable;
+import net.loveruby.cflat.ir.*;
 import net.loveruby.cflat.asm.Label;
 import net.loveruby.cflat.exception.*;
 import java.util.*;
