@@ -1,7 +1,7 @@
-package net.loveruby.cflat.ast;
+package net.loveruby.cflat.entity;
 import net.loveruby.cflat.compiler.ErrorHandler;
-import net.loveruby.cflat.exception.*;
 import net.loveruby.cflat.type.Type;
+import net.loveruby.cflat.exception.*;
 import java.util.*;
 
 public class LocalScope extends Scope {
