@@ -1,6 +1,6 @@
 package net.loveruby.cflat.ir;
+import net.loveruby.cflat.entity.Function;
 import net.loveruby.cflat.asm.Type;
-import net.loveruby.cflat.ast.Function;
 import java.util.List;
 import java.util.ListIterator;
 
