@@ -1,5 +1,5 @@
 package net.loveruby.cflat.ir;
-import net.loveruby.cflat.ast.Entity;
+import net.loveruby.cflat.entity.Entity;
 import net.loveruby.cflat.asm.*;
 
 public class Var extends Expr {
