@@ -10,8 +10,9 @@ PARSER_BEGIN(Parser)
 package net.loveruby.cflat.parser;
 import net.loveruby.cflat.compiler.*;
 import net.loveruby.cflat.ast.*;
+import net.loveruby.cflat.entity.*;
 import net.loveruby.cflat.type.*;
-import net.loveruby.cflat.asm.*;
+import net.loveruby.cflat.asm.Label;
 import net.loveruby.cflat.exception.*;
 import java.lang.reflect.*;
 import java.util.*;
